# nanobot

./: AGENTS.md  ARCHITECTURE.md  PHASE1_SPEC.md  docker-compose.hatchery.yml  pyproject.toml
hatchery/: .env.example  Dockerfile  __init__.py  db.py  logging_utils.py  runtime_env.py  security.py  service_runner.py  settings.py
hatchery/adapters/: __init__.py  mqtt.py
hatchery/app/: __init__.py  gui.html  gui.py
hatchery/approval_gateway/: __init__.py  feishu.py  service.py
hatchery/assessment/: __init__.py  service.py
hatchery/audit/: __init__.py  service.py
hatchery/container/: __init__.py
hatchery/contracts/: __init__.py  api.py  events.py
hatchery/execution/: __init__.py  real_adapter.py  service.py
hatchery/ingest/: __init__.py  service.py
hatchery/orchestrator_bridge/: __init__.py  agent.py  bridge.py  client.py  nanobot_integration.py  nanobot_tools.py  runner.py  tools.py
hatchery/policy/: __init__.py  service.py
hatchery/safety/: __init__.py  service.py
hatchery/simulator/: __init__.py  scenarios.py
hatchery/taskcenter/: __init__.py
hatchery/verification/: __init__.py  service.py
nanobot/cli/: commands.py
nanobot/providers/: __init__.py
scripts/: acceptance_hatchery.ps1  backup_hatchery_db.ps1  e2e_hatchery.py  mqtt_live_smoke.py  restore_hatchery_db.ps1  start_hatchery_stack.ps1
tests/: test_hatchery_api.py  test_hatchery_bridge.py  test_hatchery_bridge_cors.py  test_hatchery_bridge_integration.py  test_hatchery_bridge_runner.py  test_hatchery_deployment.py  test_hatchery_gui.py  test_hatchery_mqtt_reliability.py  test_hatchery_nanobot_gateway_bridge.py  test_hatchery_nanobot_gateway_cli.py  test_hatchery_ops.py  test_hatchery_real_adapter.py  test_hatchery_runtime.py  test_hatchery_safety.py  test_hatchery_security.py
